[package]
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
categories = ["development-tools", "command-line-utilities"]
description = "Interactive command-line tool to experiment with `flock(2)` locks"
edition = "2021"
license = "MIT"
name = "allenap-flock-experiment"
readme = "README.md"
repository = "https://github.com/allenap/allenap-flock-experiment"
version = "0.1.0"

[dependencies]
getch = "0.2.1"
nix = "0.23.0"
